--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -78,6 +78,7 @@ en:
         aged_account_receivable: "Aged Account Receivable"
         item_sales: "Item Sales"
         invoice_detail: "Invoice Detail"
+        overdue_invoices: "Overdue Invoices"
       setting:
         setting: "Setting"
         companies: "Companies"
@@ -449,8 +450,10 @@ en:
       aged_accounts_receivable: "Aged Accounts Receivable"
       aged_accounts_receivable_dtl: "This report shows summary of outstanding amount against unpaid and/or partially paid invoices for each client."
       invoice_detail_dtl: "This report shows detail invoices for each client."
+      overdue_invoices_dtl: "This report shows overdue invoices for each client."
       item_sales: "Item Sales"
       invoice_detail: "Invoice Detail Report"
+      overdue_invoices: "Overdue Invoices Report"
       export_to: "Export to"
       print_report: "Print Report"
       report_no_data: "No data found against the selected criteria. Please change criteria and try again."
