--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -5,15 +5,20 @@ pt-BR:
   company: "Empresa"
   invoice: "Fatura"
   invoices: "Faturas"
+  projects: "Projetos"
+  project: "Projeto"
+  project_name: "Nome do Projeto"
   payment: "Pagamento"
   client: "Cliente"
+  manager: "Gerente"
   clients: "Clientes"
   item: "Item"
   report: "Relatório"
   amount: "Quantia"
-  current: "Atual"
-  past: "Anterior"
+  current: "Atuais"
+  past: "Anteriores"
   edit: "Editar"
+  estimate: "Estimativa"
 
   date:
     formats:
@@ -27,36 +32,65 @@ pt-BR:
       dashboard: "Dashboard"
       invoices:
         invoices: "Faturas"
-        listing: "Mostrando faturamento"
+        listing: "Lista de faturas"
         new: "Nova Fatura"
         recurring: "Recorrente"
+      time_tracking:
+        time_tracking: "Cronograma"
+        time_sheet: "Horários"
+        project: "Projetos"
+        staff: "Funcionários"
+        task: "Tarefas"
+        invoice: "Gerar fatura"
+      projects:
+        new: "Novo Projeto"
+        listing: "Listagem de projetos"
+      estimates:
+        estimates: "Estimativas"
+        listing:  "Lista de Estimativas"
+        new:  "Nova Estimativa"
+      expenses:
+        expenses: "Despesas"
+        listing: "Lista de Despesas"
+        new: "Nova Despesa"
       clients:
         clients: "Clientes"
-        listing: "Mostrando Clientes"
-        new: "Novo Client"
+        listing: "Lista de Clientes"
+        new: "Novo Cliente"
         sent_emails: "Emails Enviados"
       items:
         items: "Itens"
-        listing: "Mostrando Itens"
+        listing: "Lista de Itens"
         new: "Novo Item"
         taxes: "Impostos"
       payments:
         payments: "Pagamentos"
-        listing: "Mostrando Pagamentos"
+        listing: "Lista de Pagamentos"
         new: "Novo Pagamento"
       reports:
         reports: "Relatórios"
         payment_collected: "Pagamentos Recebidos"
         revenue_by_client: "Fatura por Cliente"
-        aged_account_receivable: "Contas a Receber por Período"
+        aged_account_receivable: "Contas a Receber"
         item_sales: "Venda de Itens"
+        invoice_detail: "Faturas Detalhadas"
+        overdue_invoices: "Faturas Vencidas"
       setting:
-        setting: "Configuração"
+        setting: "Ajustes"
         companies: "Empresas"
         email_templates: "Templates de Email"
         users: "Usuários"
-        basic_settings: "Configuração Básica"
+        basic_settings: "Configurações Básicas"
+        import_data: "Importar Dados"
+      staffs:
+        Staffs: "Funcionários"
+        listing: "Lista de Funcionários"
+        new: "Novo Funcionário"
+      tasks:
+        new: "Nova Tarefa"
       help: "Ajuda"
+      applications: "Aplicações"
+      api_docs: "Documentação da API"
 
   views:
     common:
@@ -115,12 +149,12 @@ pt-BR:
       csv: "CSV"
       excel: "Excel"
       all: "Todos"
-      go: "Vai"
-      quarter: "Quarto"
+      go: "Ir"
+      quarter: "Trimestre"
       month: "Mês"
       year: "Ano"
       name: "Nome"
-      percentage: 'Percentagem'
+      percentage: 'Porcentagem'
       back: "Voltar"
       save_and_add_more: "Salvar e Adicionar mais"
       discount: "Disconto"
@@ -152,8 +186,8 @@ pt-BR:
       profession: "Profissão"
       phone_business: "Telefone comercial"
       phone_mobile: "Telefone celular"
-      auto_dst_adjustment: "Ajuste DST automáticamente"
-      currency_symbol: "Simbolo da moeda"
+      auto_dst_adjustment: "Ajuste DST automaticamente"
+      currency_symbol: "Símbolo da moeda"
       currency_code: "Código da moeda"
       admin_first_name: "Primeiro nome do Administrador"
       admin_last_name: "Último nome do Administrador"
@@ -163,10 +197,10 @@ pt-BR:
       admin_password: "Senha do Administrador"
 
     dashboard:
-      ytd_income: "YTD Income"
-      ytd_income_detail: "Quantia total recebida contra faturamento enviados durante este ano"
+      ytd_income: "Faturamento YTD"
+      ytd_income_detail: "Quantia total recebida x Faturas enviados durante este ano"
       amount_billed: "Quantia faturada"
-      amount_billed_detail: "Soma do faturamento total enviados para clientes até agora"
+      amount_billed_detail: "Soma do faturamento total enviado para clientes até agora"
       total_outstanding: "Total em circulação"
       total_outstanding_detail: "Quantidade de clientes devedores"
       aged_ar: "AR antigo"
@@ -177,10 +211,12 @@ pt-BR:
       due_date: "Data de vencimento"
       no_current_invoices: "Não há faturas atuais"
       no_previous_invoices: "Nenhuma fatura anterior"
-      received_payment_detail: "Que faturas você recebeu?"
+      received_payment_detail: "Quais faturas você recebeu?"
       apply_payment_detail: "Selecione uma ou mais faturas da lista abaixo para aplicar o pagamento."
       selected_amount_detail: "Você não selecionou nenhuma fatura. Por favor, selecione uma ou mais faturas e tente novamente."
       enter_payment: "Digite o pagamento"
+      sent_to: "enviado para"
+      received_from: "recebido de"
 
     invoices:
       invoice: "Faturas"
@@ -194,7 +230,7 @@ pt-BR:
       company_hint: "empresa para esta fatura"
       client_hint: "cliente que você deseja enviar a fatura"
       term_hint: "Termos de pagamento para esta fatura"
-      invoices: "Gerado automáticamente"
+      invoices: "Gerado automaticamente"
       invoice_date: "Data da fatura"
       add_line_item: "Adicionar item"
       terms_hint: "Termos de pagamento para esta fatura"
@@ -202,7 +238,7 @@ pt-BR:
       invoice_date: "Data da fatura"
       terms: "Termos"
       subtotal: "Subtotal"
-      net_total: "Net Total"
+      net_total: "Total líquido"
       send_invoice: "Enviar fatura"
       line_total: "Line Total"
       invoice_number: "Fatura #"
@@ -220,11 +256,25 @@ pt-BR:
       invoice_deleted: "Esta fatura foi apagada."
       payment_history: "Histórico de pagamento"
       dispute_invoice: "Disputar Fatura"
-      reason_for_dispute: "Rasão para Disputa"
+      reason_for_dispute: "Razão para contestar"
       no_invoice_found: "Nenhum faturamento encontrado"
       no_invoice_msg: "Você ainda não criou nenhuma fatura. Por favor clique no botão 'Nova Fatura' para criar uma nova fatura."
       no_archived_msg: "Você não possui nenhuma fatura arquivada."
       no_deleted_msg: "Você não possui nenhuma fatura apagada"
+      sent: "Enviada"
+      paid: "Quitada"
+      draft: "Rascunho"
+      disputed: "Em disputa"
+      viewed: "Visualizada"
+      draft_partial: "Rascunho parcial"
+      partial: "Parcial"
+      draft_dtl: 'Fatura criada, porém você não notificou seu cliente.'
+      sent_dtl: 'Fatura criada e enviada para o seu cliente.'
+      viewed_dtl: 'Seu cliente clicou no link da fatura enviada por email e visualizou a fatura.'
+      paid_dtl: 'O cliente efetuou o pagamento total da fatura.'
+      partial_dtl: 'O cliente pagou parcialmente a fatura.'
+      draft_partial_dtl: 'Pagamento efetuado para a fatura de rascunho.'
+      disputed_dtl: 'O cliente contestou esta fatura.'
       recurring:
         recurring_profile: "Perfil Recorrente"
         start_date: "Data de início"
@@ -235,7 +285,7 @@ pt-BR:
         new: "Novo Perfil Recorrente"
         profile_id: "ID do Perfil"
         last_sent: "Último enviado"
-        frequency: "Frenquência"
+        frequency: "Frequência"
         no_record_msg: "Você não criou nenhum perfil recorrente ainda. Por favor clique no botão Novo Perfil Recorrente."
         no_record_msg_archived: "Você não possui nenhum perfil recorrente."
         no_record_msg_deleted: "Você não possui nenhum perfil recorrente apagado."
@@ -269,14 +319,14 @@ pt-BR:
       contact_name: "Nome do contato"
       first_name: "Primeiro nome"
       last_name: "Último nome"
-      industry: "Industria"
-      select_an_industry: "Selecione uma industria..."
+      industry: "Indústria"
+      select_an_industry: "Selecione uma indústria..."
       company_size: "Tamanho da empresa"
       select_company_size: "Selecione o tamanho da empresa..."
       internal_notes: "Notas internas"
       listing_sent_emails: "Mostrando emails enviados"
       subject: "Assunto"
-      recipient: "Destinário"
+      recipient: "Destinatário"
       type: "Tipo"
       date: "Data"
       no_sent_emails: "Nenhum email enviado."
@@ -318,7 +368,7 @@ pt-BR:
       new: "Novo Pagamento"
       delete_forever: "Apagar para sempre"
       net_due: "Net due"
-      total_amount_due_against_selected_invoices: "Montante total devido contra faturas selecionadas"
+      total_amount_due_against_selected_invoices: "Montante total devido x Faturas selecionadas"
       payments_entered_against_selected_invoices: "Pagamentos contabilizados para faturas selecionadas"
       which_invoices_have_you_received_payment_for: "Quais faturas você recebeu o pagamento"
       select_one_or_more_invoices_from_the_list_below_to_apply_payment: "Selecione uma ou mais faturas abaixo para aplicar o pagamento."
@@ -339,10 +389,12 @@ pt-BR:
     reports:
       reports: "Relatórios"
       payments_collected: "Pagamentos coletados"
-      payments_collected_dtl: "Este relatório mostra um histórico de todos os pagamentos feito para cada fatura selecionável pelo cliente e data."
+      payments_collected_dtl: "Este relatório mostra um histórico de todos os pagamentos feitos para cada fatura por cliente e data."
       revenue_by_client: "Receita por cliente"
       aged_accounts_receivable: "Contas a receber antigas"
-      aged_accounts_receivable_dtl: "Este relatório mostra um sumário do montante pendente contra faturas não pagas e / ou parcialmente pagos para cada cliente."
+      aged_accounts_receivable_dtl: "Este relatório mostra um sumário do montante pendente x Faturas não pagas e/ou parcialmente pagas para cada cliente."
+      invoice_detail_dtl: "Este relatório mostra faturas detalhadas para cada cliente."
+      invoice_detail: "Relatório de Faturas Detalhadas"
       item_sales: "Vendas de item"
       export_to: "Exportar para"
       print_report: "Imprimir relatório"
@@ -355,9 +407,13 @@ pt-BR:
       total_qty_sold: "Quantia total vendido"
       total_amount: "Quantia total"
       total_discount: "Disconto total"
-      net_total: "Net Total"
+      net_total: "Total líquido"
       period_ending: "Período em que termina"
       date_range: "Intervalo das datas"
+      overdue_invoices:
+        name: "Relatório de Faturas Vencidas"
+        details: "Este relatório mostra faturas vencidas para cada cliente."
+        period: "Data da fatura entre %{start_date} e %{end_date}. Data de vencimento até %{today}"
 
     settings:
       settings: "Configuração"
@@ -376,8 +432,8 @@ pt-BR:
       branding: "Marca"
       logo: "Logo"
       browse: "Procurar"
-      tag_line: "Tagline da Empresa"
-      memo: "Memo"
+      tag_line: "Slogan da Empresa"
+      memo: "Memorando"
 
     email_templates:
       email_templates: "Templates para Emails"
